services/shop/src/components/UI/TransitionArrow/TransitionArrow.module.scss
@use '@packages/shared/src/utils/styles/colorScheme' as colors;

.arrow__btn {
    width: 35px;
    object-fit: contain;
    object-position: center;
    position: absolute;
    overflow: hidden;
    border-radius: 50%;
    cursor: pointer;
    top: 46%;
    box-shadow: colors.$gray 0px 0px 16px;
    z-index: 10;
    opacity: 0;
    background-color: transparent;
    transition: all 0.1s 0s;

    .arrow__btn_icon {
        width: 100%;
        filter: invert(1);
    }
}

.arrow__btn_visible {
    transition: all 0.2s 0s;
    opacity: 1;
    &:hover {
        filter: brightness(1.5);
    }
}

